fix double border menu issue

--- a/style.css
+++ b/style.css
@@ -827,13 +827,13 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #aaa; }
 
 .nav-menu.mobile button.active .svg-icon { fill: #333; }
-.nav-menu.mobile ul ul { background: #f5f5f5; }
-.nav-menu.mobile ul li .menu-item-wrapper { border-bottom: 1px solid #eee; }
-.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid #e5e5e5; }
-.nav-menu.mobile > div > ul > li:first-child .menu-item-wrapper { border-top: 1px solid #eee; }
+.nav-menu.mobile ul ul { background: rgba(0,0,0,0.03); }
+.nav-menu.mobile ul li .menu-item-wrapper,
+.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(0,0,0,0.07); }
 .nav-menu.mobile ul li a { color: #333; }
-.nav-menu.mobile ul button { border-left: 1px solid #eee; }
-.nav-menu.mobile ul ul button { border-left: 1px solid #e5e5e5; }
+.nav-menu.mobile ul button,
+.nav-menu.mobile ul ul button { border-left: 1px solid rgba(0,0,0,0.07); }
+.nav-menu.mobile > div > ul { border-top: 1px solid rgba(0,0,0,0.07); }
 
 
 /* ------------------------------------------------------------------------- *
@@ -904,52 +904,6 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 #footer-bottom .social-links .social-tooltip { font-size: 22px; }
 #footer-bottom .social-links .social-tooltip:hover:after { background: #333; color: #fff; }
 #footer-bottom .social-links .social-tooltip:hover:before { border-color: #333 transparent; }
-
-/*  footer : nav
-/* ------------------------------------ */
-#nav-footer.nav-container { background: #fff; text-align: center; z-index: 97; border-bottom: 1px solid #e5e5e5; padding-left: 20px; padding-right: 20px; }
-#nav-footer .nav-toggle { background: transparent; color: #333; }
-#nav-footer .nav-text { color: #666; }
-
-@media only screen and (min-width: 720px) {
-
-	/* common */
-	#nav-footer .nav { font-weight: 600; }
-	#nav-footer .nav li a { font-size: 16px; color: #666; }	
-	#nav-footer .nav > li:last-child { margin-right: 0; }
-	/* level 1 */
-	#nav-footer .nav > li { border-right: none; margin-right: 24px; }
-	#nav-footer .nav > li > a { padding: 18px 0; margin-bottom: -1px; }
-	#nav-footer .nav > li > a:hover, 
-	#nav-footer .nav > li:hover > a { background: transparent; color: #555; }
-	#nav-footer .nav li > a:hover, 
-	#nav-footer .nav li:hover > a { color: #333; } 
-	#nav-footer .nav li.current_page_item > a, 
-	#nav-footer .nav li.current-menu-item > a,
-	#nav-footer .nav li.current-menu-ancestor > a,
-	#nav-footer .nav li.current-post-parent > a { color: #333; }
-	/* level 2 & 3 */
-	#nav-footer .nav > li > ul { bottom: 55px; top: auto; text-align: left; }
-	#nav-footer .nav ul { background: #fff; border-radius: 4px; border: 1px solid rgba(0,0,0,0.15); box-shadow: 3px 3px 0 0 rgba(0,0,0,0.05); }
-	#nav-footer .nav > li > ul:after { content:''; display: inline-block; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid #fff; border-bottom: 8px solid transparent; position: absolute; bottom: -15px; left: 21px; } 
-	#nav-footer .nav > li > ul:before { content:''; display: inline-block; border-left: 9px solid transparent; border-right: 9px solid transparent; border-top: 9px solid #ddd; border-bottom: 9px solid transparent; position: absolute; bottom: -18px; left: 20px; } 
-	#nav-footer .nav ul li { border-bottom: none; }
-	#nav-footer .nav ul li:last-child { border-bottom: none; }
-	#nav-footer .nav ul li a { font-size: 14px; border: none; padding-top: 6px; padding-bottom: 6px;  }
-}
-
-@media only screen and (max-width: 719px) {
-	
-	/* common */
-	#nav-footer .nav { padding-bottom: 20px; text-align: left; }
-	#nav-footer .nav li a { color: #666; border-top: 1px solid #f1f1f1; }	
-	/* level 1 */
-	#nav-footer .nav li > a:hover { background: #f1f1f1; color: #333; }
-	#nav-footer .nav li.current_page_item > a, 
-	#nav-footer .nav li.current-menu-item > a,
-	#nav-footer .nav li.current-post-parent > a { background: #eee; color: #333; }
-	
-}
 
 
 /* ------------------------------------------------------------------------- *
